--- a/app/src/main/res/layout/word_list.xml
+++ b/app/src/main/res/layout/word_list.xml
@@ -5,7 +5,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.miwok.NumbersActivity"/>
+    android:drawSelectorOnTop="true"
+    tools:context="com.example.android.cracking_barrier.NumbersActivity"/>
 
 
 
