--- a/app/src/main/res/layout/activity_colors.xml
+++ b/app/src/main/res/layout/activity_colors.xml
@@ -8,6 +8,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.miwok.ColorsActivity">
+    tools:context="com.example.android.cracking_barrier.ColorsActivity">
 
 </RelativeLayout>
